--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9"]  # TODO: run tests on "3.7", "3.8", "3.9", "3.10", "3.11"
+        python-version: ["3.9", "3.10", "3.11"]  # TODO: run tests on "3.7", "3.8"
 
     steps:
       - uses: "actions/checkout@v3"
