--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,11 +21,13 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "${{ matrix.python-version }}"
+
       - name: cache poetry install
         uses: actions/cache@v2
         with:
           path: ~/.local
           key: poetry-1.2.1-0
+
       - uses: snok/install-poetry@v1
         with:
           version: 1.2.1
@@ -37,7 +39,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .venv
-          key: pydeps-${{ hashFiles('**/poetry.lock') }}
+          key: py-${{ matrix.python-version }}-deps-${{ hashFiles('**/poetry.lock') }}
 
       - run: poetry install --no-interaction --no-root
         if: steps.cache-deps.outputs.cache-hit != 'true'
