--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ mypy = "^0.991"
 ruff = "^0.0.182"
 black = "^22.12.0"
 isort = "^5.11.2"
-coverage = {extras = ["toml"], version = "^6.5.0"}
 pytest-asyncio = "^0.20.3"
+coverage = "^7.0.1"
+mutmut = "^2.4.3"
 
 
 [tool.poetry.group.docs.dependencies]
