--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "^22.12.0"
 isort = "^5.11.2"
 coverage = {extras = ["toml"], version = "^6.5.0"}
 pytest-asyncio = "^0.20.3"
+pytest-cov = "^4.0.0"
 
 
 [tool.poetry.group.docs.dependencies]
