--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ pytest-cov = "^4.0.0"
 mkdocs = "^1.4.2"
 mkdocs-material = "^8.5.11"
 mdx-include = "^1.4.2"
+mkautodoc = "^0.2.0"
+httpx = "^0.23.1"
 
 [project.urls]
 Homepage = "https://github.com/roma-glushko/hyx"
