--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,11 +90,11 @@ nav:
 - Getting Started: index.md
 - Components:
     - Introduction: components/index.md
-    - Retry: components/retry.md
+    - Retries: components/retry.md
     - Circuit Breakers: components/circuit_breakers.md
-    - Timeout: components/timeout.md
-#     - Rate Limiter: components/rate_limiter.md
-#     - Bulkhead: components/bulkhead.md
-#     - Fallback: components/fallback.md
+    - Timeouts: components/timeout.md
+    - Fallbacks: components/fallback.md
+    - Rate Limiters: components/rate_limiter.md
+    - Bulkheads: components/bulkhead.md
 - FAQ: faq.md
 # - Release Notes: release_notes.md
