--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,5 +97,6 @@ nav:
     - Fallbacks: components/fallback.md
     - Rate Limiters: components/rate_limiter.md
     - Bulkheads: components/bulkhead.md
+- Roadmap: roadmap.md
 - FAQ: faq.md
 # - Release Notes: release_notes.md
