--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ copyright: Copyright &copy; 2022 - Present, <a target="_blank" href="https://www
 theme:
   name: material
   icon:
+    logo: material/meditation
     repo: fontawesome/brands/github
   palette:
   - media: '(prefers-color-scheme: light)'
@@ -90,11 +91,12 @@ nav:
 - Getting Started: index.md
 - Components:
     - Introduction: components/index.md
-    - Retry: components/retry.md
+    - Retries: components/retry.md
     - Circuit Breakers: components/circuit_breakers.md
-    - Timeout: components/timeout.md
-#     - Rate Limiter: components/rate_limiter.md
-#     - Bulkhead: components/bulkhead.md
-#     - Fallback: components/fallback.md
+    - Timeouts: components/timeout.md
+    - Fallbacks: components/fallback.md
+    - Rate Limiters: components/rate_limiter.md
+    - Bulkheads: components/bulkhead.md
+- Roadmap: roadmap.md
 - FAQ: faq.md
 # - Release Notes: release_notes.md
