--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ python = ">=3.9,<4.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 mypy = "^0.991"
-ruff = "^0.0.182"
+ruff = "0.0.261"
 black = "^22.12.0"
 isort = "^5.11.2"
 pytest-asyncio = "^0.20.3"
@@ -61,6 +61,7 @@ mkdocs-material = "^8.5.11"
 mdx-include = "^1.4.2"
 mkautodoc = "^0.2.0"
 httpx = "^0.23.1"
+fastapi = "^0.95.1"
 
 [tool.black]
 line-length = 120
