#88 Added linting checks to the CI pipeline (#94)
* #88 Added linting checks to the CI pipeline

* #88 used poetry to run all CLI apps

* ##88 Renamed the pipeline name

* ##88 linting

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 ---
-name: Tests
+name: CI
 
 on:
   push:
@@ -46,7 +46,8 @@ jobs:
 
       - run: poetry install --no-interaction
 
-        # TODO: add linting [https://github.com/roma-glushko/hyx/issues/12]
+      - name: "Linting"
+        run: "make lint-check"
 
       - name: "Build package & docs"
         run: "make build"
