#75 Installed Signoz into the cluster

--- a/examples/pixi/Makefile
+++ b/examples/pixi/Makefile
@@ -26,6 +26,7 @@ help:
 cluster-start:  ## Start the cluster
 	@k3d cluster create $(CLUSTER) --agents 2 \
 		--registry-create $(CLUSTER)-registry:0.0.0.0:$(REGISTRY_PORT) \
+		-p "8888:80@loadbalancer" \
 		--kubeconfig-update-default --kubeconfig-switch-context
 
 cluster-ctx:  ## Configure the cluster context
