#104: Moved over to UV & updated the supported python versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
-[tool.poetry]
+[project]
 name = "hyx"
 version = "0.0.2"
 description = "Lightweight fault tolerance primitives for your modern Python microservices"
-authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
-license = "Apache-2.0"
+authors = [{ name = "Roman Glushko", email = "roman.glushko.m@gmail.com" }]
+license = { text = "Apache-2.0" }
 readme = "README.md"
-
-homepage = "https://hyx.readthedocs.io/en/latest/"
-repository = "https://github.com/roma-glushko/hyx"
-documentation = "https://hyx.readthedocs.io/en/latest/"
+requires-python = ">=3.9,<4.0"
 
 keywords = [
     "resiliency",
@@ -41,27 +38,31 @@ classifiers = [
     "Topic :: System :: Networking",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+[project.urls]
+Homepage = "https://hyx.readthedocs.io/en/latest/"
+Repository = "https://github.com/roma-glushko/hyx"
+Documentation = "https://hyx.readthedocs.io/en/latest/"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-mypy = "^0.991"
-ruff = "0.0.261"
-black = "^22.12.0"
-isort = "^5.11.2"
-pytest-asyncio = "^0.20.3"
-coverage = "^7.0.1"
-mutmut = "^2.4.3"
-pytest-cov = "^4.0.0"
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-material = "^8.5.11"
-mdx-include = "^1.4.2"
-mkautodoc = "^0.2.0"
-httpx = "^0.23.1"
-fastapi = "^0.95.1"
+[dependency-groups]
+dev = [
+    "pytest>=7.2.0",
+    "mypy>=0.991",
+    "ruff>=0.0.261",
+    "black>=22.12.0",
+    "isort>=5.11.2",
+    "pytest-asyncio>=0.20.3",
+    "coverage>=7.0.1",
+    "mutmut>=2.4.3",
+    "pytest-cov>=4.0.0",
+]
+docs = [
+    "mkdocs>=1.4.2",
+    "mkdocs-material>=8.5.11",
+    "mdx-include>=1.4.2",
+    "mkautodoc>=0.2.0",
+    "httpx>=0.23.1",
+    "fastapi>=0.95.1",
+]
 
 [tool.black]
 line-length = 120
@@ -113,5 +114,5 @@ target-version = "py39"
 max-complexity = 10
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
