--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,13 @@
 # .readthedocs.yaml
 version: 2
 
-# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
-    python: "3.9"
-  jobs:
-    post_install:
-      - pip install poetry==1.4.2
-      - poetry config virtualenvs.create false
-      - poetry install --with doc
-
-mkdocs:
-  configuration: mkdocs.yml
+    python: "3.11"
+  commands:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv sync --group docs
+    - uv run mkdocs build --strict --site-dir $READTHEDOCS_OUTPUT/html
