--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hyx"
 version = "0.0.2"
 description = "Lightweight fault tolerance primitives for your modern Python microservices"
-authors = [{ name = "Roman Glushko", email = "roman.glushko.m@gmail.com" }]
+authors = [{ name = "Roman Hlushko", email = "roman.glushko.m@gmail.com" }]
 license = { text = "Apache-2.0" }
 readme = "README.md"
 requires-python = ">=3.9,<4.0"
@@ -14,7 +14,6 @@ keywords = [
     "bulkhead",
     "rate limiting",
     "concurrency limiting",
-    "stability",
     "microservices",
     "distributed systems",
     "timeouts",
@@ -48,8 +47,6 @@ dev = [
     "pytest>=7.2.0",
     "mypy>=0.991",
     "ruff>=0.0.261",
-    "black>=22.12.0",
-    "isort>=5.11.2",
     "pytest-asyncio>=0.20.3",
     "coverage>=7.0.1",
     "mutmut>=2.4.3",
@@ -64,22 +61,9 @@ docs = [
     "fastapi>=0.95.1",
 ]
 
-[tool.black]
-line-length = 120
-target-version = ['py39']
-
 [tool.ruff]
 line-length = 120
-
-select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "C",  # flake8-comprehensions
-    "B",  # flake8-bugbear
-]
-
+target-version = "py312"
 exclude = [
     ".bzr",
     ".direnv",
@@ -101,16 +85,20 @@ exclude = [
     "node_modules",
     "venv",
 ]
-per-file-ignores = {}
 
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "C",  # flake8-comprehensions
+    "B",  # flake8-bugbear
+]
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.10.
-target-version = "py39"
-
-[tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
+[tool.ruff.lint.mccabe]
 max-complexity = 10
 
 [build-system]
