--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,8 +57,8 @@ markdown_extensions:
 - md_in_html
 - attr_list
 - pymdownx.emoji:
-    emoji_generator: !!python/name:materialx.emoji.to_svg
-    emoji_index: !!python/name:materialx.emoji.twemoji
+    emoji_generator: !!python/name:material.extensions.emoji.to_svg
+    emoji_index: !!python/name:material.extensions.emoji.twemoji
 - pymdownx.superfences:
     custom_fences:
     - name: mermaid
