--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
-[tool.poetry]
+[project]
 name = "hyx"
 version = "0.0.2"
 description = "Lightweight fault tolerance primitives for your modern Python microservices"
-authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
-license = "Apache-2.0"
+authors = [{ name = "Roman Hlushko", email = "roman.glushko.m@gmail.com" }]
+license = { text = "Apache-2.0" }
 readme = "README.md"
-
-homepage = "https://hyx.readthedocs.io/en/latest/"
-repository = "https://github.com/roma-glushko/hyx"
-documentation = "https://hyx.readthedocs.io/en/latest/"
+requires-python = ">=3.9,<4.0"
 
 keywords = [
     "resiliency",
@@ -17,7 +14,6 @@ keywords = [
     "bulkhead",
     "rate limiting",
     "concurrency limiting",
-    "stability",
     "microservices",
     "distributed systems",
     "timeouts",
@@ -41,44 +37,33 @@ classifiers = [
     "Topic :: System :: Networking",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+[project.urls]
+Homepage = "https://hyx.readthedocs.io/en/latest/"
+Repository = "https://github.com/roma-glushko/hyx"
+Documentation = "https://hyx.readthedocs.io/en/latest/"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-mypy = "^0.991"
-ruff = "0.0.261"
-black = "^22.12.0"
-isort = "^5.11.2"
-pytest-asyncio = "^0.20.3"
-coverage = "^7.0.1"
-mutmut = "^2.4.3"
-pytest-cov = "^4.0.0"
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-material = "^8.5.11"
-mdx-include = "^1.4.2"
-mkautodoc = "^0.2.0"
-httpx = "^0.23.1"
-fastapi = "^0.95.1"
-
-[tool.black]
-line-length = 120
-target-version = ['py39']
+[dependency-groups]
+dev = [
+    "pytest>=7.2.0",
+    "mypy>=0.991",
+    "ruff>=0.0.261",
+    "pytest-asyncio>=0.20.3",
+    "coverage>=7.0.1",
+    "mutmut>=2.4.3",
+    "pytest-cov>=4.0.0",
+]
+docs = [
+    "mkdocs>=1.4.2",
+    "mkdocs-material>=8.5.11",
+    "mdx-include>=1.4.2",
+    "mkautodoc>=0.2.0",
+    "httpx>=0.23.1",
+    "fastapi>=0.95.1",
+]
 
 [tool.ruff]
 line-length = 120
-
-select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "C",  # flake8-comprehensions
-    "B",  # flake8-bugbear
-]
-
+target-version = "py312"
 exclude = [
     ".bzr",
     ".direnv",
@@ -100,18 +85,22 @@ exclude = [
     "node_modules",
     "venv",
 ]
-per-file-ignores = {}
 
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "C",  # flake8-comprehensions
+    "B",  # flake8-bugbear
+]
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.10.
-target-version = "py39"
-
-[tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
+[tool.ruff.lint.mccabe]
 max-complexity = 10
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
